[gd_scene load_steps=5 format=2]

[ext_resource path="res://utils/pixelfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/UI/MainMenuBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://utils/optionstyle.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/UI/MainMenu.gd" type="Script" id=4]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuBackground" parent="." instance=ExtResource( 2 )]
margin_left = -0.092527
margin_top = -8.79053
margin_right = -0.0925903
margin_bottom = -8.79053

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 249.0
margin_bottom = 59.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 249.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 1 )
text = "SHADE"

[node name="Menu" type="Control" parent="VBoxContainer"]
visible = false
margin_top = 79.0
margin_right = 249.0
margin_bottom = 79.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Menu"]
margin_right = 249.0
margin_bottom = 86.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="START" type="Label" parent="VBoxContainer/Menu/VBoxContainer"]
margin_right = 249.0
margin_bottom = 22.0
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 3 )
text = "START"

[node name="CONTROLS" type="Label" parent="VBoxContainer/Menu/VBoxContainer"]
margin_top = 42.0
margin_right = 249.0
margin_bottom = 64.0
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 3 )
text = "CONTROLS"

[node name="CREDITS" type="Label" parent="VBoxContainer/Menu/VBoxContainer"]
margin_top = 84.0
margin_right = 249.0
margin_bottom = 106.0
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 3 )
text = "CREDITS"

[node name="Controls" type="Control" parent="VBoxContainer"]
visible = false
margin_top = 99.0
margin_right = 249.0
margin_bottom = 99.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Controls"]
margin_right = 249.0
margin_bottom = 86.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Controls/VBoxContainer"]
margin_right = 249.0
margin_bottom = 22.0

[node name="Label" type="Label" parent="VBoxContainer/Controls/VBoxContainer/HBoxContainer"]
margin_right = 80.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
text = "Move"

[node name="Label3" type="Label" parent="VBoxContainer/Controls/VBoxContainer/HBoxContainer"]
margin_left = 84.0
margin_right = 94.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
text = ":"

[node name="Label2" type="Label" parent="VBoxContainer/Controls/VBoxContainer/HBoxContainer"]
margin_left = 98.0
margin_right = 149.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
text = "A D"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/Controls/VBoxContainer"]
margin_top = 42.0
margin_right = 249.0
margin_bottom = 64.0

[node name="Label" type="Label" parent="VBoxContainer/Controls/VBoxContainer/HBoxContainer2"]
margin_right = 105.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
text = "Attack"

[node name="Label3" type="Label" parent="VBoxContainer/Controls/VBoxContainer/HBoxContainer2"]
margin_left = 109.0
margin_right = 119.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
text = ":"

[node name="Label2" type="Label" parent="VBoxContainer/Controls/VBoxContainer/HBoxContainer2"]
margin_left = 123.0
margin_right = 142.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
text = "K"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/Controls/VBoxContainer"]
margin_top = 84.0
margin_right = 249.0
margin_bottom = 106.0

[node name="Label" type="Label" parent="VBoxContainer/Controls/VBoxContainer/HBoxContainer3"]
margin_right = 97.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
text = "SHIELD"

[node name="Label3" type="Label" parent="VBoxContainer/Controls/VBoxContainer/HBoxContainer3"]
margin_left = 101.0
margin_right = 111.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
text = ":"

[node name="Label2" type="Label" parent="VBoxContainer/Controls/VBoxContainer/HBoxContainer3"]
margin_left = 115.0
margin_right = 129.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
text = "L"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer/Controls/VBoxContainer"]
margin_top = 126.0
margin_right = 249.0
margin_bottom = 148.0

[node name="Label" type="Label" parent="VBoxContainer/Controls/VBoxContainer/HBoxContainer4"]
margin_right = 76.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
text = "DASH"

[node name="Label3" type="Label" parent="VBoxContainer/Controls/VBoxContainer/HBoxContainer4"]
margin_left = 80.0
margin_right = 90.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
text = ":"

[node name="Label2" type="Label" parent="VBoxContainer/Controls/VBoxContainer/HBoxContainer4"]
margin_left = 94.0
margin_right = 176.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
text = "SHIFT"

[node name="BACK" type="Label" parent="VBoxContainer/Controls/VBoxContainer"]
margin_top = 168.0
margin_right = 249.0
margin_bottom = 190.0
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 3 )
text = "BACK"

[node name="Credits" type="Control" parent="VBoxContainer"]
margin_top = 79.0
margin_right = 249.0
margin_bottom = 79.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Credits"]
margin_right = 335.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Credits/VBoxContainer"]
margin_right = 492.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
text = "Art and Development By Renzo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="VBoxContainer/Credits/VBoxContainer"]
margin_top = 26.0
margin_right = 492.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="VBoxContainer/Credits/VBoxContainer"]
margin_top = 52.0
margin_right = 492.0
margin_bottom = 74.0
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 3 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="VBoxContainer/Menu/VBoxContainer/START" to="." method="_on_START_gui_input"]
[connection signal="mouse_entered" from="VBoxContainer/Menu/VBoxContainer/START" to="." method="_on_START_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Menu/VBoxContainer/START" to="." method="_on_START_mouse_exited"]
[connection signal="gui_input" from="VBoxContainer/Menu/VBoxContainer/CONTROLS" to="." method="_on_CONTROLS_gui_input"]
[connection signal="mouse_entered" from="VBoxContainer/Menu/VBoxContainer/CONTROLS" to="." method="_on_CONTROLS_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Menu/VBoxContainer/CONTROLS" to="." method="_on_CONTROLS_mouse_exited"]
[connection signal="gui_input" from="VBoxContainer/Menu/VBoxContainer/CREDITS" to="." method="_on_CREDITS_gui_input"]
[connection signal="mouse_entered" from="VBoxContainer/Menu/VBoxContainer/CREDITS" to="." method="_on_CREDITS_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Menu/VBoxContainer/CREDITS" to="." method="_on_CREDITS_mouse_exited"]
[connection signal="gui_input" from="VBoxContainer/Controls/VBoxContainer/BACK" to="." method="_on_BACK_gui_input"]
[connection signal="mouse_entered" from="VBoxContainer/Controls/VBoxContainer/BACK" to="." method="_on_BACK_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Controls/VBoxContainer/BACK" to="." method="_on_BACK_mouse_exited"]
[connection signal="gui_input" from="VBoxContainer/Credits/VBoxContainer/Label3" to="." method="_on_Label3_gui_input"]
[connection signal="mouse_entered" from="VBoxContainer/Credits/VBoxContainer/Label3" to="." method="_on_Label3_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Credits/VBoxContainer/Label3" to="." method="_on_Label3_mouse_exited"]
